--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.5-Alpha1
	- Added Emulate gettext() from upgradephp-15
		(http://freshmeat.net/p/upgradephp)
	- Fixed Test.php parse error.
	- Updated multibyte character strings mail.
	- Fixed To send mail don't remove the last comma from recipient.
	- Updated More translatable templates.
	- Removed merge-messages.sh and Add LANGLIST (each languages 
		translation statistics).
	- Fixed If database name don't named ampache, can't renamed tags
		to tag.
	- Fixed count issue on browse Artists (Thx Sylvander)
	- Fixed prevent_multiple_logins, preventing all logins (Thx hugh)
	- Fixed Export catalog headers so it corretly prompts you to download
		the file
	- Add ability to sort by artist name, album name on song browse
	- Implemented caching on artist and album browse, added total
		artist time to the many artist view
	- Fixed test config page so it bounces you back to the test page
		if the config starts parsing correctly
	- Fixed browsing so that you can browse two different types in two 
		windows at the same time 
	- Improved gather script for translations (Thx momo-i)
	- Added paging to the localplay playlist
	- Updated German Translation (Thx Laurent)
	- Fixed issue where Remote songs would never be removed from
		the democratic playlist
	- Fixed issue where user preferences weren't set correctly
		on stream (Thx lorijho)
	- Added caching of user preferences to avoid a SQL query on load
		(Thx Protagonist)
	- Fixed home menu not always displaying the entire contents
	- Fixed logic error with duplicate login setting which caused it
		to only work if mysql auth was used
	- Changed Passwords to SHA1 will prompt to reset password