@@ -382,7 +382,7 @@ function get_languages() {
 	$results = array(); 
 
 	/* Prepend English */
-	$results['en_US'] = 'English';
+	$results['en_US'] = 'English (US)';
 
 	while ($file = readdir($handle)) { 
 
@@ -391,21 +391,51 @@ function get_languages() {
 		/* Check to see if it's a directory */
 		if (is_dir($full_file) AND substr($file,0,1) != '.' AND $file != 'base') { 
 				
-			switch($file) { 
-				case 'de_DE'; $name = 'Deutsch'; break;
-				case 'en_US'; $name = 'English'; break;
-				case 'ca_CA'; $name = 'Catal&#224;'; break;
-				case 'en_GB'; $name = 'British English'; break;
-				case 'es_ES'; $name = 'Espa&ntilde;ol'; break;
-				case 'el_GR'; $name = 'Greek (&#x0395;&#x03bb;&#x03bb;&#x03b7;&#x03bd;&#x03b9;&#x03ba;&#x03ac;)'; break; 
-				case 'fr_FR'; $name = 'Fran&ccedil;ais'; break;
-				case 'it_IT'; $name = 'Italiano'; break;
-				case 'is_IS'; $name = '&Iacute;slenska'; break;
-				case 'nl_NL'; $name = 'Nederlands'; break;
-				case 'tr_TR'; $name = 'Turkish'; break;
-				case 'zh_CN'; $name = _('Simplified Chinese') . " (&#x7b80;&#x4f53;&#x4e2d;&#x6587;)"; break;
-				case 'ru_RU'; $name = 'Russian (&#x0420;&#x0443;&#x0441;&#x0441;&#x043a;&#x0438;&#x0439;)'; break;
-				case 'ja_JP'; $name = 'Japanese (&#x65e5;&#x672c;&#x8a9e;)'; break;
+			switch($file) {
+				case 'af_ZA'; $name = 'Afrikaans'; break; /* Afrikaans */
+				case 'ca_ES'; $name = 'Catal&#224;'; break; /* Catalan */
+				case 'cs_CZ'; $name = '&#x010c;esky'; break; /* Czech */
+				case 'da_DK'; $name = 'Dansk'; break; /* Danish */
+				case 'de_DE'; $name = 'Deutsch'; break; /* German */
+				case 'en_US'; $name = 'English (US)'; break; /* English */
+				case 'en_GB'; $name = 'English (UK)'; break; /* English */
+				case 'es_ES'; $name = 'Espa&#241;ol'; break; /* Spanish */
+				case 'es_MX'; $name = 'Espa&#241;ol (MX)'; break; /* Spanish */
+				case 'es_AR'; $name = 'Espa&#241;ol (AR)'; break; /* Spanish */
+				case 'et_EE'; $name = 'Eesti'; break; /* Estonian */
+				case 'eu_ES'; $name = 'Euskara'; break; /* Basque */
+				case 'fr_FR'; $name = 'Fran&#231;ais'; break; /* French */
+				case 'ga_IE'; $name = 'Gaeilge'; break; /* Irish */
+				case 'el_GR'; $name = 'Greek'; break; /* Greek */
+				case 'is_IS'; $name = 'Icelandic'; break; /* Icelandic */
+				case 'it_IT'; $name = 'Italiano'; break; /* Italian */
+				case 'lv_LV'; $name = 'Latvie&#353;u'; break; /* Latvian */
+				case 'lt_LT'; $name = 'Lietuvi&#371;'; break; /* Lithuanian */
+				case 'hu_HU'; $name = 'Magyar'; break; /* Hungarian */
+				case 'nl_NL'; $name = 'Nederlands'; break; /* Dutch */
+				case 'no_NO'; $name = 'Norsk bokm&#229;l'; break; /* Norwegian */
+				case 'pl_PL'; $name = 'Polski'; break; /* Polish */
+				case 'pt_BR'; $name = 'Portugu&#234;s Brasileiro'; break; /* Portuguese */
+				case 'pt_PT'; $name = 'Portugu&#234;s'; break; /* Portuguese */
+				case 'ro_RO'; $name = 'Rom&#226;n&#259;'; break; /* Romanian */
+				case 'sk_SK'; $name = 'Sloven&#269;ina'; break; /* Slovak */
+				case 'sl_SI'; $name = 'Sloven&#353;&#269;ina'; break; /* Slovenian */
+				case 'sr_CS'; $name = 'Srpski'; break; /* Serbian */
+				case 'fi_FI'; $name = 'Suomi'; break; /* Finnish */
+				case 'sv_SE'; $name = 'Svenska'; break; /* Swedish */
+				case 'uk_UA'; $name = 'Українська'; break; /* Ukrainian */
+				case 'vi_VN'; $name = 'Ti&#7871;ng Vi&#7879;t'; break; /* Vietnamese */
+				case 'tr_TR'; $name = 'T&#252;rk&#231;e'; break; /* Turkish */
+				case 'bg_BG'; $name = '&#x0411;&#x044a;&#x043b;&#x0433;&#x0430;&#x0440;&#x0441;&#x043a;&#x0438;'; break; /* Bulgarian */
+				case 'ru_RU'; $name = '&#1056;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;'; break; /* Russian */
+				case 'zh_CN'; $name = '&#31616;&#20307;&#20013;&#25991;'; break; /* Chinese */
+				case 'zn_TW'; $name = '&#32321;&#39636;&#20013;&#25991;'; break; /* Chinese */
+				case 'ko_KR'; $name = '&#xd55c;&#xad6d;&#xb9d0;'; break; /* Korean */
+				case 'ja_JP'; $name = '&#x65e5;&#x672c;&#x8a9e;'; break; /* Japanese */
+				/* These languages are right to left. */
+				case 'ar_SA'; $name = '&#1575;&#1604;&#1593;&#1585;&#1576;&#1610;&#1577;'; break; /* Arabic */
+				case 'he_IL'; $name = '&#1506;&#1489;&#1512;&#1497;&#1514;'; break; /* Hebrew */
+				case 'fa_IR'; $name = '&#1601;&#1575;&#1585;&#1587;&#1610;'; break; /* Farsi */
 				default: $name = _('Unknown'); break;
 			} // end switch
 
